# Firefly-Agent

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml  启动流萤桌面.cmd
.github/workflows/: ci.yml
autopilot-dashboard/: package-lock.json
docs/: UPDATE_REPORT_2026-07-13.md
docs/superpowers/plans/: 2026-07-12-companion-imprint-settings-plan.md
docs/superpowers/specs/: 2026-07-11-firefly-face-reference-design.md  2026-07-11-relationship-sidecar-design.md  2026-07-12-companion-imprint-direct-chat-design.md  2026-07-12-companion-imprint-settings-design.md  (+1 more)
firefly/: __init__.py  __main__.py  autostart.py  cli.py  companion_imprint.py  context.py  desktop_awareness.py  desktop_tools.py  documents.py  library_index.py  memory.py  persona.py  prompts.py  runtime.py  session_storage.py  stickers.py  workspace.py
firefly-relationship-gateway/: .gitignore  README.md  config.example.json
firefly-relationship-gateway/relationship_gateway/: __init__.py  __main__.py  config.py  gateway.py  narrative.py  panel.py  playback.py  state.py  visual_assets.py
firefly-relationship-gateway/scripts/: generate_story_bgm.py
firefly-relationship-gateway/tests/: test_bootstrap.py  test_gateway.py  test_narrative.py  test_panel.py  test_playback.py  test_visual_library.py
firefly/assets/: ATTRIBUTION.md
firefly/desktop/: __init__.py  app.py  chat_rendering.py  chat_window.py  companion_imprint.py  music.py  pet_window.py  settings_panel.py  styles.py  upload_widgets.py  workers.py
firefly/live2d/: __init__.py  module.py
frontend/terminal/: package-lock.json  package.json
ohmo/: __init__.py  cli.py  session_storage.py
ohmo/gateway/: service.py
scripts/: install.ps1  install.sh  install_dev.sh
src/openharness/: __init__.py  cli.py  version.py
tests/: test_companion_imprint.py  test_companion_imprint_client.py  test_companion_imprint_popup.py  test_companion_imprint_ui.py  test_firefly_app.py  test_firefly_session_storage.py  test_hooks_skills_plugins_real.py  test_merged_prs_on_autoagent.py  test_real_large_tasks.py  test_untested_features.py
tests/test_channels/: test_discord_security.py
tests/test_permissions/: test_checker.py
tests/test_sandbox/: test_adapter.py
tests/test_services/: test_cron_scheduler.py
tests/test_skills/: test_loader.py
tests/test_tools/: test_core_tools.py  test_grep_tool.py  test_image_generation_tool.py  test_image_to_text_tool.py  test_web_fetch_tool.py
(+55 files in other folders)
