[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openharness-ai"
dynamic = ["version"]
description = "Open-source Python port of Claude Code - an AI-powered CLI coding assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "novix-science" },
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "mcp>=1.0.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0",
    "questionary>=2.0.1",
    "watchfiles>=0.20.0",
    "croniter>=2.0.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
channels = [
    "slack-sdk>=3.0.0",
    "python-telegram-bot>=21.0.0",
    "discord.py>=2.0.0",
    "lark-oapi>=1.5.0",
]
firefly = [
    "PySide6>=6.7.0,<6.11",
    "pypdf>=4.0.0",
]
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
openharness = "openharness.cli:app"
oh = "openharness.cli:app"
openh = "openharness.cli:app"
ohmo = "ohmo.cli:app"
firefly = "firefly.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openharness", "ohmo", "firefly"]

[tool.hatch.build]
exclude = [
    "/.git",
    "/.agents",
    "/.claude",
    "/.codex",
    "/.venv",
    "/.openharness-venv",
    "/.openharness",
    "/.pytest_cache",
    "/.mypy_cache",
    "/.ruff_cache",
    "/build",
    "/dist",
]

[tool.hatch.build.targets.wheel.force-include]
"frontend/terminal/package.json" = "openharness/_frontend/package.json"
"frontend/terminal/tsconfig.json" = "openharness/_frontend/tsconfig.json"
"frontend/terminal/src" = "openharness/_frontend/src"

[tool.hatch.version]
path = "src/openharness/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
explicit_package_bases = true
follow_imports = "skip"
ignore_missing_imports = true
files = [
    "src/openharness/version.py",
    "src/openharness/permissions/checker.py",
    "src/openharness/utils/fs.py",
    "src/openharness/utils/network_guard.py",
    "firefly/library_index.py",
    "firefly/workspace.py",
]
